fix(ui5-li-tree): fix arrow flickering (#3293)
Fixes: #3238

--- a/packages/main/src/themes/TreeListItem.css
+++ b/packages/main/src/themes/TreeListItem.css
@@ -43,7 +43,7 @@
 }
 
 :host(:not([level="1"])) {
-    border-bottom: none;
+    border-color: var(--sapList_AlternatingBackground);
 }
 
 :host([_toggle-button-end][selected]:not([level="1"])){
